# icl

./: .gitignore  .hgignore  BUILD  CMakeLists.txt  COPYING  COPYING-FR  COPYRIGHT  HISTORY  HISTORY.md  INSTALL  LICENSE  Makefile  Makefile.tcds  Module.mk  README  README.md  TODO  TODO.md  botclient.pro  build_tcds.bat  build_tcds.sh  console.pro  desktop.pro  icl.cmake  icl.pri  icl.vcxproj  icl.vcxproj.filters  icl_tests.pro  tcds.pro  tcds.sln  tcds.vcxproj
ai/: beginner.js  bid.js  bid.qs  index.html  unit_test.js  workspace.js
ai/tarotlib/: bot.js  card.js  deck.js  game.js  player.js  system.js  util.js
android/: .project  AndroidManifest.xml  build.xml
assets/: android.qrc  data.qrc  desktop.qrc  testu.qrc
assets/ai/: beginner.js  conf.json  main.js  noob.js  noob.json  package.json
assets/canvasjs/: canvas.qml  class.js  easeljs-0.8.2.combined.js  engine.js  goo2.js  index.html  main.js  widgets.js  wrapper.js
assets/cards/: create_minideck.pl
assets/doc/: rules_fr.html
assets/html/: index.html
assets/icons/: tarotclub.xsl
assets/qml/: DealViewer.qml
assets/ts/: tarotclub_fr.qm
assets/windows/: icon.rc
console/: main.cpp
db/: CouchDb.cpp  CouchDb.h  DataBase.cpp  DataBase.h
doc/: TarotClub-book.odt  book.txt  design.dia  generate_doc.sh  gitorious.txt  index.html  js_engine_principle.odg  protocol.md  rules_en.html  security.md  software_quality.odt  tarotclub.qch  tarotclub.qhc  tarotclub.qhcp  tarotclub.qhp  tarotclub_network_protocol.odt  tarotclub_network_protocol_flowchart.odg  tarotmag18.ods
html5/: index.html
io/: ByteArray.cpp  ByteArray.h  ByteStreamReader.cpp  ByteStreamReader.h  ByteStreamWriter.cpp  ByteStreamWriter.h
jsengine/: IScriptEngine.h  JSEngine.cpp  JSEngine.h
json/: JsonReader.cpp  JsonReader.h  JsonValue.cpp  JsonValue.h  JsonWriter.cpp  JsonWriter.h
lora/: LoRaMac-api-v3.cpp  LoRaMac-api-v3.h  LoRaMac-board.h  LoRaMac.cpp  LoRaMac.h  LoRaMacCrypto.cpp  LoRaMacCrypto.h
lua/: bid.lua
network/: TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  TcpServerBase.cpp  TcpServerBase.h  TcpServerEpoll.cpp  TcpSocket.cpp  TcpSocket.h  TlsClient.cpp  TlsClient.h  UdpSocket.cpp  UdpSocket.h  WebSocket.cpp  WebSocket.h
packaging/: README.md  make_debian_package.sh  make_windows_setup.bat
packaging/fedora/: rpmmacros
packaging/tarball/: make_packages.sh
packaging/windows/: install_innosetup.iss
pkg/: TarotClub.url  control_amd64.txt  control_i386.txt  install.nsi  install.sh  install_amd64.sh  install_i386.sh  install_innosetup.iss  make_tarball.sh  version.txt
pkg/debian/: changelog  control  copyright  install  links  rules  tarotclub.desktop
pkg/tarball/: make_tarball.sh
pkg/ubuntu/: control_amd64.txt  control_i386.txt  install.sh  make_packages.sh  postinst  tarotclub.desktop  tarotclub.menu
pkg/windows/: install_innosetup.iss
prj/: Makefile  TarotClub.pro  TarotClubServer.pro  TarotClubd.pro  android.pro  botclient.pro  build_tcds.bat  desktop.pro  install.nsi  moc_AvatarsWindow.cpp  moc_Bot.cpp  moc_ChatDock.cpp  moc_Client.cpp  moc_Game.cpp  moc_MainWindow.cpp  moc_OptionsWindow.cpp  moc_ResultWindow.cpp  moc_ScoresDock.cpp  moc_Tapis.cpp  qrc_resources.cpp  server.rc  tarotclub_en.ts  tarotclub_fr.qm  tarotclub_fr.ts  tcds.pro  tcds.sln  tcds.vcxproj  testu.pro
prj/android/: AndroidManifest.xml
prj/dealviewer/: dealviewer.html  demo_card.html
prj/desktop/: desktop.pro  icon.rc  tarotclub_en.qm  tarotclub_en.ts  tarotclub_fr.qm  tarotclub_fr.ts
prj/html5/: canvas.html  system.js
prj/include/: ui_AboutUI.h  ui_AvatarsUI.h  ui_NetClientUI.h  ui_OptionsUI.h  ui_ResultUI.h
prj/tcds/: tcds.pro  tcds.sln  tcds.vcxproj
prj/testu/: main.cpp  tcp_socket.pro  test.json  testu.pro  tst_database.cpp  tst_hash.cpp  tst_hash.h  tst_jsengine.cpp  tst_jsengine.h  tst_json.cpp  tst_json.h  tst_main.cpp  tst_tarot_base.cpp  tst_tarot_base.h  tst_tarot_rules.cpp  tst_tarot_rules.h  tst_tcp_socket.cpp  tst_utilities.cpp  tst_utilities.h  tst_websocket.h
prj/websocket/: app.js  client.js  identity.js  protocol.js  websocket.html
protocol/: Http.cpp  Http.h  HttpClient.cpp  HttpClient.h  HttpFileServer.cpp  HttpFileServer.h  HttpProtocol.cpp  HttpProtocol.h  TinyMac.cpp  TinyMac.h
quality/: TODO.md  run_astyle.sh  run_coverage.bat  run_vera++.bat
quality/astyle/: astyle.cfg
quality/coverage/: coverage.pl
security/: Base64.cpp  Base64Util.cpp  Base64Util.h  Sha1.cpp  Sha1.h  Sha256.cpp  Sha256.h  ShaOne.cpp  ShaTwo.cpp  ShaTwo.h
src/: AvatarsWindow.h  Bot.cpp  Bot.h  BotManager.cpp  BotManager.h  ByteArray.h  ByteStream.h  Card.cpp  Card.h  ChatDock.cpp  ChatDock.h  Client.cpp  Client.h  ClientConfig.cpp  ClientConfig.h  Common.cpp  Common.h  ConfigFile.cpp  ConfigFile.h  Controller.cpp  Controller.h  Deal.cpp  Deal.h  DealEditorFile.cpp  DealEditorFile.h  DealFile.cpp  DealFile.h  Deck.cpp  Deck.h  Defines.h  Engine.cpp  Engine.h  Game.cpp  Game.h  GameOptions.h  GameState.cpp  GameState.h  Identity.h  InfosDock.h  Jeu.cpp  (+84 more)
src/base/: Jeu.h  (+4 more)
tcds/: Console.cpp  Console.h  CouchDb.cpp  CouchDb.h  DataBase.cpp  DataBase.h  Server.cpp  Server.h  TCDS.md  Version.h  main.cpp
tests/: filesystem.c  main.cpp  testu.pro  tst_database.h  tst_json.cpp  tst_json.h  tst_tcp_socket.cpp  tst_utilities.cpp  tst_utilities.h  tst_webstuff.cpp  tst_webstuff.h  unit_test.html  unit_test.js
tools/: astyle.cfg  coverage.pl  create_debug_dir.pl  create_debug_directories.bat  index.html  round_cards.csv  run_astyle.sh  run_coverage.bat  start_all.bat  system.js  tarotclub-bender.json  tarotclub-leela.json  tarotclub-zoidberg.json  tarotclub.cppcheck  tcp_test.pl  unit_test.html  unit_test.js
util/: Console.cpp  Console.h  DurationTimer.h  ErrorHelper.h  EventLoop.cpp  EventLoop.h  GetOptions.h  IEventLoop.h  Jwt.h  Log.cpp  Log.h  Observer.h  Pool.h  SemanticVersion.h  Semaphore.h  SharedLibrary.cpp  SharedLibrary.h  ThreadQueue.h  UniqueId.cpp  UniqueId.h  Util.cpp  Util.h  Value.cpp  Value.h  libutil.h
www/: README.md  app.js  help.docx  index.html  package.json
zip/: Zip.cpp  Zip.h  miniz.c
(+482 files in other folders)
